# agentic_handson

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
.github/workflows/: opencode.yml
travel/domain/: agent.py  model.py  models.py
travel/infrastructure/: weather_client.py
travel/tools/: location.py  time_awareness.py  weather.py
