[project]
name = "hands-on-pydantic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.4",
    "openmeteo-requests>=1.7.5",
    "pydantic-ai>=1.88.0",
    "pydantic-extra-types>=2.11.1",
    "chainlit>=2.0.0",
]
